--- a/Hospital.WPF/Controls/ConfirmDialog.xaml
+++ b/Hospital.WPF/Controls/ConfirmDialog.xaml
@@ -18,6 +18,6 @@
         <Border Background="{DynamicResource BrushPrimaryBorderLight}" Margin="10,0" Grid.ColumnSpan="2" Height="1" VerticalAlignment="Bottom" Grid.Row="0"/>
         <Button Click="Button_ClickCancel" Grid.Column="0" Grid.Row="1" Content="Отмена" Margin="10"/>
         <Button Click="Button_ClickOk" Grid.Column="1" Grid.Row="1" Content="ОК" Margin="10"/>
-        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding ElementName=ConformDialog, Path=Message}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"/>
+        <TextBlock Margin="20,10" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding ElementName=ConformDialog, Path=Message}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"/>
     </Grid>
 </Window>
