--- a/Hospital.WPF/Views/Main.xaml
+++ b/Hospital.WPF/Views/Main.xaml
@@ -21,12 +21,12 @@
 		Title="Hospital" Height="720" Width="1280">
    
 	<mah:MetroWindow.LeftWindowCommands>
-		<mah:WindowCommands ShowLastSeparator="False" >
+		<mah:WindowCommands ShowLastSeparator="False">
 			<StackPanel Orientation="Horizontal">
 				<Button Content="menu"/>
 				<ListBox Foreground="{DynamicResource MahApps.Brushes.Gray}" Cursor="Hand"
 						 VerticalAlignment="Bottom"
-						 ItemsSource="{Binding Pages, ElementName=MainWindow}"
+						 ItemsSource="{Binding MenuNavigator.Bodies, ElementName=MainWindow}"
 						 SelectedItem="{Binding CurrentPage, ElementName=MainWindow}"
 						 ItemContainerStyle="{StaticResource TitleListBoxItem}"
 						 Background="Transparent">
@@ -40,14 +40,62 @@
 							<TextBlock Text="{Binding Path=Label}"/>
 						</DataTemplate>
 					</ListBox.ItemTemplate>
-
 				</ListBox>
 			</StackPanel>
 		</mah:WindowCommands>
 	</mah:MetroWindow.LeftWindowCommands>
 
-	<Grid>
-		<ContentControl Content="{Binding CurrentPage, ElementName=MainWindow}"/>
+    <mah:MetroWindow.RightWindowCommands>
+        <mah:WindowCommands ShowLastSeparator="False" Height="28" VerticalAlignment="Bottom">
+            <StackPanel Orientation="Horizontal">
+                <ListBox ItemsSource="{Binding ElementName=MainWindow, Path=TabNavigator.Bodies}"
+                         SelectedItem="{Binding ElementName=MainWindow, Path=CurrentPage}"
+                         Cursor="Hand">
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+								<TextBlock Text="{Binding Path=DataContext.Caption}" Padding="6"/>
+                                <Button Command="{Binding Command.CloseTab}" Padding="8">
+                                    <Path x:Name="path_close" Data="{StaticResource path.Close}" Stretch="Uniform" Height="10" Fill="{DynamicResource BrushBackgroundPaper}"/>
+                                    <Button.Style>
+                                        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource MahApps.Styles.Button.Chromeless}">
+                                            <Setter Property="Visibility" Value="Collapsed"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}, Path=IsSelected}" Value="true">
+                                                    <Setter Property="Visibility" Value="Visible"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Button.Style>
+                                </Button>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource MahApps.Styles.ListBoxItem}">
+                            <Setter Property="Foreground" Value="{DynamicResource BrushForegroundLight}"/>
+                            <Setter Property="FontSize" Value="14"/>
+                            <Setter Property="Padding" Value="5,0"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsSelected" Value="True">
+                                    <Setter Property="FontWeight" Value="DemiBold"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                </ListBox>    
+            </StackPanel>    
+        </mah:WindowCommands>
+    </mah:MetroWindow.RightWindowCommands>
+    
+    <Grid>
+        <mah:TransitioningContentControl Content="{Binding CurrentPage, ElementName=MainWindow}" Transition="Default"/>
+
         <Border BorderThickness="0,1,0,0" VerticalAlignment="Top" BorderBrush="{StaticResource BrushPrimaryBorderLight}"/>
 
         <ContentControl VerticalAlignment="Bottom">
