--- a/Hospital.WPF/Controls/Ambulatory/AmbDiagnostic.xaml
+++ b/Hospital.WPF/Controls/Ambulatory/AmbDiagnostic.xaml
@@ -184,7 +184,7 @@
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True" MinWidth="35" Width="35" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridTextColumn Header="КОД" Binding="{Binding Test.Id}" IsReadOnly="True" MaxWidth="60" Width="0.5*" MinWidth="30" ElementStyle="{StaticResource tb_common}"/>
-                                <DataGridTextColumn Header="НАЗВАНИЕ" Binding="{Binding Test.ShortTitle}" IsReadOnly="True" Width="*" MinWidth="100" ElementStyle="{StaticResource tb_common}"/>
+                                <DataGridTextColumn Header="НАЗВАНИЕ" Binding="{Binding Test.Caption}" IsReadOnly="True" Width="*" MinWidth="100" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridTextColumn Header="ОПЦИЯ" Binding="{Binding Option}"  EditingElementStyle="{StaticResource tb_editing}" Width="*" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridTextColumn Header="ЗАКЛЮЧЕНИЕ" Binding="{Binding Value}"  EditingElementStyle="{StaticResource tb_editing}" MinWidth="80" Width="*" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridTextColumn Header="НОРМА" MaxWidth="120" Width="0.5*"  IsReadOnly="True" ElementStyle="{StaticResource tb_common}">
@@ -293,7 +293,7 @@
                             <ComboBox Grid.Row="0" Grid.Column="1" MinHeight="0" Style="{StaticResource cb.Panel}"/>
                             <ComboBox   Grid.Row="1" Grid.Column="1" MinHeight="0"  Style="{StaticResource cb.Panel}" mah:TextBoxHelper.Watermark="Тип"
                                 ItemsSource="{Binding LabTestTypes, IsAsync=True, UpdateSourceTrigger=PropertyChanged}"
-                                SelectedValue="{Binding CurrentLabTestType.ShortTitle}" DisplayMemberPath="ShortTitle" SelectedValuePath="ShortTitle"
+                                SelectedValue="{Binding CurrentLabTestType.Caption}" DisplayMemberPath="Caption" SelectedValuePath="Caption"
                                 SelectedItem="{Binding CurrentLabTestType}"/>
 
                             <ComboBox Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" MinHeight="0" Style="{StaticResource cb.Panel}" mah:TextBoxHelper.Watermark="Имя шаблона"
@@ -306,7 +306,7 @@
                                 SelectedItem="{Binding SelectedLabTest}"/>
                             <ComboBox   Grid.Row="1" Grid.Column="3" MinHeight="0" Style="{StaticResource cb.Panel}" mah:TextBoxHelper.Watermark="Название"
                                 ItemsSource="{Binding LabTestList, IsAsync=True, UpdateSourceTrigger=PropertyChanged}"
-                                SelectedValue="{Binding SelectedLabTest.ShortTitle}" DisplayMemberPath="ShortTitle" SelectedValuePath="ShortTitle"
+                                SelectedValue="{Binding SelectedLabTest.Caption}" DisplayMemberPath="Caption" SelectedValuePath="Caption"
                                 SelectedItem="{Binding SelectedLabTest}"/>
 
                             <ComboBox Grid.Row="0" Grid.Column="4" MinHeight="0" Style="{StaticResource cb.Panel}" mah:TextBoxHelper.Watermark="Отделение"/>
@@ -380,7 +380,7 @@
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True" MinWidth="35" Width="35" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridTextColumn Header="КОД" Binding="{Binding Test.Id}" IsReadOnly="True" MaxWidth="60" Width="0.5*" MinWidth="30" ElementStyle="{StaticResource tb_common}"/>
-                                <DataGridTextColumn Header="НАЗВАНИЕ" Binding="{Binding Test.ShortTitle}" IsReadOnly="True" Width="*" MinWidth="100" ElementStyle="{StaticResource tb_common}"/>
+                                <DataGridTextColumn Header="НАЗВАНИЕ" Binding="{Binding Test.Caption}" IsReadOnly="True" Width="*" MinWidth="100" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridTextColumn Header="ТКАНЬ" Binding="{Binding Option}"  EditingElementStyle="{StaticResource tb_editing}" Width="*" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridTextColumn Header="РЕЗУЛЬТАТ" Binding="{Binding Value}"  EditingElementStyle="{StaticResource tb_editing}" Width="*" MinWidth="50" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridTextColumn Header="НОРМА" MaxWidth="100" Width="0.5*" IsReadOnly="True" ElementStyle="{StaticResource tb_common}">
@@ -489,7 +489,7 @@
                             <ComboBox Grid.Row="0" Grid.Column="1" MinHeight="0" Style="{StaticResource cb.Panel}"/>
                             <ComboBox   Grid.Row="1" Grid.Column="1" MinHeight="0" Style="{StaticResource cb.Panel}" mah:TextBoxHelper.Watermark="Тип"
                                 ItemsSource="{Binding ToolTestTypes, IsAsync=True, UpdateSourceTrigger=PropertyChanged}"
-                                SelectedValue="{Binding CurrentToolTestType.ShortTitle}" DisplayMemberPath="ShortTitle" SelectedValuePath="ShortTitle"
+                                SelectedValue="{Binding CurrentToolTestType.Caption}" DisplayMemberPath="Caption" SelectedValuePath="Caption"
                                 SelectedItem="{Binding CurrentToolTestType}"/>
 
                             <ComboBox Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" MinHeight="0" Style="{StaticResource cb.Panel}" mah:TextBoxHelper.Watermark="Имя шаблона"
@@ -502,7 +502,7 @@
                                 SelectedItem="{Binding SelectedToolTest}"/>
                             <ComboBox   Grid.Row="1" Grid.Column="3" MinHeight="0" Style="{StaticResource cb.Panel}" mah:TextBoxHelper.Watermark="Название"
                                 ItemsSource="{Binding ToolTestList, IsAsync=True, UpdateSourceTrigger=PropertyChanged}"
-                                SelectedValue="{Binding SelectedToolTest.ShortTitle}" DisplayMemberPath="ShortTitle" SelectedValuePath="ShortTitle"
+                                SelectedValue="{Binding SelectedToolTest.Caption}" DisplayMemberPath="Caption" SelectedValuePath="Caption"
                                 SelectedItem="{Binding SelectedToolTest}"/>
 
                             <ComboBox Grid.Row="0" Grid.Column="4" MinHeight="0" Style="{StaticResource cb.Panel}" mah:TextBoxHelper.Watermark="Отделение"/>
@@ -577,7 +577,7 @@
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True" MinWidth="35" Width="35" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridTextColumn Header="КОД" Binding="{Binding Test.Id}" IsReadOnly="True" MaxWidth="60" Width="0.5*" MinWidth="30" ElementStyle="{StaticResource tb_common}"/>
-                                <DataGridTextColumn Header="НАЗВАНИЕ" Binding="{Binding Test.ShortTitle}" IsReadOnly="True" Width="*" MinWidth="100" ElementStyle="{StaticResource tb_common}"/>
+                                <DataGridTextColumn Header="НАЗВАНИЕ" Binding="{Binding Test.Caption}" IsReadOnly="True" Width="*" MinWidth="100" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridTextColumn Header="ТКАНЬ/ОРГАН" Binding="{Binding Option}"  EditingElementStyle="{StaticResource tb_editing}" Width="*" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridTextColumn Header="ЗАКЛЮЧЕНИЕ" Binding="{Binding Value}"  EditingElementStyle="{StaticResource tb_editing}" Width="*" MinWidth="50" ElementStyle="{StaticResource tb_common}"/>
                                 <DataGridCheckBoxColumn Header="СИМПТОМ" Binding="{Binding IsSymptom}" MinWidth="40" Width="0.5*" MaxWidth="80"/>
